--- a/src/styles/Botao.module.css
+++ b/src/styles/Botao.module.css
@@ -5,7 +5,7 @@
     font-size: 1.2rem;
     border: none;
     padding: 10px 25px;
-    background-color: #9885F0;
+    background-color: #9f8dec;
     margin-top: 40px;
     cursor: pointer;
     transition: all .2s ease-in-out;
