--- a/src/styles/Estatistica.module.css
+++ b/src/styles/Estatistica.module.css
@@ -20,3 +20,28 @@
     font-size: 1.7rem;
     font-weight: 200;
 }
+
+@media (max-width: 768px) {
+    .estatistica {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 5px;
+    }
+    
+    .valor {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 90px;
+        width: 90px;
+        border-radius: 90px;
+        font-size: 2rem;
+    }
+    
+    .texto {
+        color: #ddd;
+        font-size: 1.2rem;
+        font-weight: 200;
+    }
+}
