--- a/src/styles/Questao.module.css
+++ b/src/styles/Questao.module.css
@@ -3,3 +3,11 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media (min-width: 768px) {
+    .questao {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
