--- a/src/styles/Questao.module.css
+++ b/src/styles/Questao.module.css
@@ -4,10 +4,11 @@
     align-items: center;
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
     .questao {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+
 }
