--- a/src/styles/Resposta.module.css
+++ b/src/styles/Resposta.module.css
@@ -1,10 +1,9 @@
 .resposta {
     display: flex;
-    min-width: 500px; 
-    width: 80%;
-    height: 100%;
+    min-width: 200px;
+    width: 95%;
+    height: 80px;
     margin: 10px;
-    perspective: 1000px;
 }
 
 .conteudoResposta {
@@ -19,7 +18,8 @@
     transform: rotateY(180deg);
 }
 
-.frente, .verso {
+.frente,
+.verso {
     position: absolute;
     display: flex;
     height: 100%;
@@ -31,8 +31,8 @@
 .frente {
     align-items: center;
     border-radius: 12px;
-    padding: 15px;
-    color: #000;
+    padding: 5px;
+    color: #000000;
     background-color: #fff;
 }
 
@@ -40,7 +40,7 @@
     transform: rotateY(180deg);
 }
 
-.verso > div {
+.verso>div {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -51,43 +51,47 @@
 
 .certa {
     background-color: #2BAA6D;
+    text-align: center;
 }
 
 .errada {
     background-color: #E44A4C;
+    text-align: center;
 }
 
-.certa .valor, .errada .valor {
-    font-size: 1.2rem;
+.certa .valor,
+.errada .valor {
+    font-size: 0.8rem;
 }
 
 .letra {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 40px;
-    width: 40px;
+    height: 20px;
+    width: 20px;
     border-radius: 20px;
-    font-size: 1rem;
-    font-weight: 700;
-    margin-right: 20px;
+    font-size: 0.6rem;
+    margin-right: 5px;
+    font-weight: 400;
     color: #fff;
 }
 
 .valor {
-    font-size: 1rem;
-    font-weight: 700;
+    font-size: 0.8rem;
+    font-weight: 400;
 }
 
-@media (max-width: 768px) {
+@media only screen and (min-width: 768px) {
     .resposta {
         display: flex;
-        min-width: 200px; 
-        width: 95%; 
-        height: 80px;
+        min-width: 500px;
+        width: 80%;
+        height: 100px;
         margin: 10px;
+        perspective: 1000px;
     }
-    
+
     .conteudoResposta {
         position: relative;
         display: flex;
@@ -95,12 +99,13 @@
         transition: transform 0.8s;
         transform-style: preserve-3d;
     }
-    
+
     .respostaRevelada.conteudoResposta {
         transform: rotateY(180deg);
     }
-    
-    .frente, .verso {
+
+    .frente,
+    .verso {
         position: absolute;
         display: flex;
         height: 100%;
@@ -108,20 +113,20 @@
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
     }
-    
+
     .frente {
         align-items: center;
         border-radius: 12px;
-        padding: 5px;
-        color: #000000;
+        padding: 15px;
+        color: #000;
         background-color: #fff;
     }
-    
+
     .verso {
         transform: rotateY(180deg);
     }
-    
-    .verso > div {
+
+    .verso>div {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -129,36 +134,35 @@
         flex: 1;
         border-radius: 12px;
     }
-    
+
     .certa {
         background-color: #2BAA6D;
-        text-align: center;
     }
-    
+
     .errada {
         background-color: #E44A4C;
-        text-align: center;
     }
-    
-    .certa .valor, .errada .valor {
-        font-size: 0.8rem;
+
+    .certa .valor,
+    .errada .valor {
+        font-size: 1.2rem;
     }
-    
+
     .letra {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 20px;
-        width: 20px;
+        height: 40px;
+        width: 40px;
         border-radius: 20px;
-        font-size: 0.6rem;
-        margin-right: 5px;
-        font-weight: 400;
+        font-size: 1rem;
+        font-weight: 700;
+        margin-right: 20px;
         color: #fff;
     }
-    
+
     .valor {
-        font-size: 0.8rem;
-        font-weight: 400;
+        font-size: 1rem;
+        font-weight: 700;
     }
 }
